--- a/webapp/test/mockServer.html
+++ b/webapp/test/mockServer.html
@@ -7,7 +7,8 @@
 
         <script
             id="sap-ui-bootstrap"
-            src="https://openui5.hana.ondemand.com/resources/sap-ui-core.js"
+            src=
+            "../../resources/sap-ui-core.js"
             data-sap-ui-theme="sap_belize"
             data-sap-ui-resourceroots='{
 				"project001employee": "../"
